fixed problem with textarea having whitespace, also fixed progress bars to more acurate

--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,20 @@ body {
   width: 70%;
 }
 
+.progress-width-85 {
+  width: 85%;
+}
+
+.progress-width-90 {
+  width: 90%;
+}
+
 .progress-width-50 {
   width: 50%;
+}
+
+.progress-width-40 {
+  width: 40%;
 }
 
 .progress-width-10 {
